# Robot-programming

rb_project/: CMakeLists.txt  package.xml
rb_project/config/: robot_sim.rviz  simulator_config.yaml
rb_project/launch/: simulator_rviz.launch
rb_project/maps/: map.yaml
rb_project/src/: config_parser.h  eigen_in_class.cpp  grid.h  grid_map.cpp  grid_map.h  laser_scan.cpp  laser_scan.h  laser_scanner.cpp  laser_scanner.h  simulator.cpp  world_item.cpp  world_item.h
robot_pkg/: CMakeLists.txt  package.xml
robot_pkg/launch/: stage_simulation.launch
robot_pkg/src/: robot_node.cpp
robot_pkg/worlds/: my_world.world
